[package]
name = "website"
version = "0.1.0"
edition = "2021"

# Optional: Set the default binary name to match macroquad expectations
[[bin]]
name = "website"
path = "src/main.rs"

[dependencies]
macroquad = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Further reduce binary size

